# loco_minijinja_engine

./: .gitignore  Cargo.toml  Justfile  README.md  TODOS.md  tarpaulin.toml
examples/usage_example/: Cargo.toml  README.md
examples/usage_example/src/: app.rs
examples/usage_example/tests/requests/: home.rs  mod.rs
src/: lib.rs
tests/: test_1.html  test_2.html  test_3.html  test_features.rs  test_route_init.rs
